# YAML-To-Resume

./: .gitignore  README.md  pyproject.toml  requirements.txt  testyaml.py  thinker.md
examples/: backend.yaml  frontend.yaml  resume.yaml
examples/components/: developer.component.yaml  general.component.yaml
src/: consts.py  main.py
src/assets/templates/Default/layout/: education.html  experience.html  header.html  layout.html  projects.html  skills.html  summary.html
src/assets/templates/Unnamed/layout/: education.html  experience.html  header.html  layout.html  projects.html  skills.html  summary.html
src/blocks/: __init__.py
src/utils/: cli.py  configuration.py  html.py  new.py  pdf.py  yaml_resume.py
yamls/: custom.yaml  resume.yaml
yamls/components/: developer.component.yaml  general.component.yaml
